Error fix #2